--- a/gb/23/2/1/n13919709.md
+++ b/gb/23/2/1/n13919709.md
@@ -34,37 +34,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/7/n13146876.md#1">南澳警察拟驾电动滑板车巡逻 全澳首试行</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/26/n13789152.md#1">RAA专家揭示阿德莱德交通灯红变绿秘诀</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13887923.md#1">阿德莱德电动滑板车获准进入第五年试营运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919705.md#1">南澳教育部门允许学生使用人工智能程序</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919702.md#1">南澳最受海外购房者青睐十大区揭晓</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963469.md#1">阿德莱德火车与有轨电车回归政府公有</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962958.md#1">阿市兰道街着手打造首个夜间娱乐好去处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903795.md#1">神仙故事：明朝人奇遇王重阳，学剑仙之术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919536.md#1">【探索时分】美欧军援300坦克 助乌抗击俄国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919352.md#1">【晚间新闻】胡鑫宇遗体“缢吊”小树林 疑点重重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918953.md#1">【军事热点】瓦格纳炮灰 恐因伤亡惨重被边缘化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917798.md#1">胡鑫宇案官方通报被指疑点重重 舆论沸腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914456.md#1">在Costco可买到七种意想不到的东西</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917542.md#1">官方称在学校附近找到胡鑫宇尸体 再引质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918066.md#1">林心如晒照庆生 与霍建华甜蜜秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917417.md#1">庆结婚十周年 郑伊健蒙嘉慧日本街头放闪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918469.md#1">宋仲基官宣结婚 与英籍女友今日登记婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918977.md#1">梁朝伟高调进驻抖音 网友喊他千万别做一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916737.md#1">缓解疼痛 抗炎食物该怎么吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916109.md#1">运动前吃什么、何时吃最健康？专家荐9种零食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917334.md#1">肠漏致多种疾病？这样做可改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918321.md#1">2023年租金预测：温和上涨 工作室需求旺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917395.md#1">【雪说健康】百年前有效治霍乱 同类疗法经验谈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960616.md#1">美中航空业之争 美有杀手锏 C919何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962026.md#1">传马云原计划去日本 突然在香港转道回国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961986.md#1">北京庆丰包子铺又被查 习近平曾到访就餐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/1/n13919709.htm">南澳反对党提议立法允许私人电动滑板车上路</a></p><hr>
